# django-wikiwikiweb

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
docs/source/: conf.py  index.rst  installation.rst  ref-admin.rst  ref-developer.rst  ref-user.rst  templatetags.rst
tests/: test_models.py  test_settings.py  test_templatetags.py  test_views.py  urls.py
wikiwikiweb/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
wikiwikiweb/fixtures/: basic-db-users.json  basic-db.json
wikiwikiweb/migrations/: 0001_initial.py  0002_historicalwikispace_homepage_wikispace_homepage.py  0003_historicalwikipage_created_by_and_more.py
wikiwikiweb/templates/registration/: login.html
wikiwikiweb/templates/wiki/: __base.html  home.html  mywiki.html  search.html  space.html  space_select.html  user.html  wiki_page.html  wiki_page_archive.html  wiki_page_create.html  wiki_page_edit.html
wikiwikiweb/templatetags/: wiki_extras.py
wikiwikiweb/tests/: test_models.py  test_templatetags.py  test_views.py
