[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-wikiwikiweb"
version = "0.0.1"
authors = [
  { name="Simon Hardng", email="djwiki@pointbeing.net" },
]
description = "A Django WikiWikiWeb app"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "django>=4.2",
  "django-bootstrap5>=24.2",
  "django-markdownify>=0.9.5",
  "django-simple-history>=3.7.0",
]

[project.urls]
Documentation = "https://django-wikiwikiweb.readthedocs.io/"
Homepage = "https://github.com/simonharris/django-wikiwikiweb"
Issues = "https://github.com/simonharris/django-wikiwikiweb/issues"
Source = "https://github.com/simonharris/django-wikiwikiweb"